@@ -225,6 +225,26 @@ More documentation can be found here :
 
 ## Troubleshooting
 
+###
+
+- Message:
+    ```bash
+    $ ./elasticsearch
+    Unrecognized VM option 'UseParNewGC'
+    Error: Could not create the Java Virtual Machine.
+    Error: A fatal exception has occurred. Program will exit.
+    ```
+ - Cause:
+ 
+   Your Java JDK version is probably up to 8 (version 10 or 11).
+   
+- Solution: 
+
+  Edit the file `bin/elasticsearch.in.sh` and comment out the following line:
+  ```
+  # ES_GC_OPTS="$ES_GC_OPTS -XX:+UseParNewGC"
+  ```  
+    
 ### Error `Refused GET request to [/ws/event/user/…`
 
 - Message:
